--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,6 +9,10 @@
   background-color: rgba(255, 255, 255, 0.5);
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Poppins", sans-serif;
 }
